# geoBoundaryBot

./: .gitignore  Containerfile  README.md  gbBuild.py  gbBuildCSV.py  gbCheckFail.py  gbDataCheck.py  gbMetaCheck.py  gbResponse.py  gbZipCheck.py  main.py  pyproject.toml
.github/workflows/: build-container.yml
actions/check/: action.yml
actions/respond/: action.yml
builder/: __main__.py  api_csv_build.py  builder_class.py  cgaz_builder.py  git_operator.py  paths.py  queue_operator.py  run.py  threaded_build_metadata_static.py  worker_operator.py  worker_script.py
charts/: .gitignore
charts/geoboundarybot/: Chart.yaml  values.yaml
charts/geoboundarybot/templates/: build-cronjob.yml  cgaz_operator.yml  cloudflared.yml  rbac.yml  volumes.yml
geoBoundaryBuilder/images/: geoBoundariesBase.Dockerfile
geoBoundaryBuilder/modules/: cgaz_builder.py
utils/: build_check.py  build_csv.py  cgaz_build.py  check_fail.py  data_check.py  helpers.py  meta_check.py  response.py  zip_check.py
