[project]
name = "geoboundarybot"
version = "0.1.0"
description = "Confirming geoBoundaries submissions are in the proper format. And destroying all humans on the weekend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]
