[project]
name = "geoboundarybot"
version = "0.1.0"
description = "Confirming geoBoundaries submissions are in the proper format. And destroying all humans on the weekend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "shapely>=2.1.2",
]

[dependency-groups]
builder = [
    "fiona>=1.10.1",
    "jsonschema>=4.26.0",
    "kubernetes>=35.0.0",
    "psycopg2-binary>=2.9.11",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
]
dev = [
    "black>=26.1.0",
]
