[project]
name = "geoboundarybot"
version = "0.1.0"
description = "Confirming geoBoundaries submissions are in the proper format. And destroying all humans on the weekend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.73",
    "click>=8.3.1",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "shapely>=2.1.2",
]

[dependency-groups]
builder = [
    "dask>=2026.1.2",
    "fiona>=1.10.1",
    "geoalchemy2>=0.17.1",
    "jsonschema>=4.26.0",
    "kr8s>=0.20.15",
    "psycopg2-binary>=2.9.11",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "sqlalchemy>=2.0.41",
]
dev = [
    "black>=26.1.0",
]
